[package]
name = "proc_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = { version = "0.37.2", features = ["system"] }
clap = { version = "4.5.53", features = ["std", "derive"]}
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"